{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 19,
  "lineage": "5e87f2d4-d662-9765-ff74-acef61a4bdb0",
  "resources": [
    {
      "module": "module.cobaia_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-cobaia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-10T15:57:47.708-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/impacta-turma-4/global/firewalls/allow-cobaia-prod",
            "log_config": [],
            "name": "allow-cobaia-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/networks/default",
            "priority": 1000,
            "project": "impacta-turma-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/firewalls/allow-cobaia-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.cobaia_server",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cobaia_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20210429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/zones/us-central1-a/disks/cobaia-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "cobaia.impacta.com.br",
            "id": "projects/impacta-turma-4/zones/us-central1-a/instances/cobaia-prod",
            "instance_id": "3393082943658525826",
            "label_fingerprint": "TctbHKt2m6w=",
            "labels": {
              "project": "iaac"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC78HPenjKq47rXFmosDE6nbZNpbf55QQs6VS+PSjSGuftoGSArx3krFXpOEztPRyYWJmsurTKLilJ/U4D30AIVc183mk9IjR9563HUhK3EhY1FrOovTy2TKAzlYQx5Jnvlc1plOi5RmyAyQR1FvuWVhqfsiwu0j3qzSlRqnpeftN/hD59tOvd/oAcca4iQ79kvNxOOobxD1tfcon740/4+JaqKhyWkXfv4xZ+Yihro5cECqBE2LLVQDOejeTLDorRSzo6q8af8fi07Tq4ji+qhziWC8V/ZjuCfANSQBv20axRnfuPtgQERvrXWe9Js8Uilxd2n1utp94H7Bov1buV/k528XwXdB0ku/Ii/LjGTqCfN77dQJ+GPcqE7eWEpu8jCJ/XbQ8BacqNxx/EABAEpFT20+5S4uIcW22bqZrO3Uu [...]
            },
            "metadata_fingerprint": "pPburUJWGkQ=",
            "metadata_startup_script": "#!/bin/bash\n\n# Instalando os subsistemas\n",
            "name": "cobaia-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.127.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/networks/default",
                "network_ip": "10.128.0.44",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/regions/us-central1/subnetworks/default",
                "subnetwork_project": "impacta-turma-4"
              }
            ],
            "project": "impacta-turma-4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/zones/us-central1-a/instances/cobaia-prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.cobaia_server.data.google_compute_image.cobaia_image",
            "module.cobaia_server.data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-10T15:57:47.844-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/impacta-turma-4/global/firewalls/allow-impacta-turma-4-prod",
            "log_config": [],
            "name": "allow-impacta-turma-4-prod",
            "network": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/networks/default",
            "priority": 1000,
            "project": "impacta-turma-4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/firewalls/allow-impacta-turma-4-prod",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.jenkins_server",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20210429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/zones/us-central1-a/disks/impacta-turma-4-prod"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "impacta-turma-4.impacta.com.br",
            "id": "projects/impacta-turma-4/zones/us-central1-a/instances/impacta-turma-4-prod",
            "instance_id": "125993238186427522",
            "label_fingerprint": "TctbHKt2m6w=",
            "labels": {
              "project": "iaac"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC78HPenjKq47rXFmosDE6nbZNpbf55QQs6VS+PSjSGuftoGSArx3krFXpOEztPRyYWJmsurTKLilJ/U4D30AIVc183mk9IjR9563HUhK3EhY1FrOovTy2TKAzlYQx5Jnvlc1plOi5RmyAyQR1FvuWVhqfsiwu0j3qzSlRqnpeftN/hD59tOvd/oAcca4iQ79kvNxOOobxD1tfcon740/4+JaqKhyWkXfv4xZ+Yihro5cECqBE2LLVQDOejeTLDorRSzo6q8af8fi07Tq4ji+qhziWC8V/ZjuCfANSQBv20axRnfuPtgQERvrXWe9Js8Uilxd2n1utp94H7Bov1buV/k528XwXdB0ku/Ii/LjGTqCfN77dQJ+GPcqE7eWEpu8jCJ/XbQ8BacqNxx/EABAEpFT20+5S4uIcW22bqZrO3Uu [...]
            },
            "metadata_fingerprint": "F6gDyRzhyvI=",
            "metadata_startup_script": "#!/bin/bash\n\n\n# Instalando os subsistemas\n\n# Instalando o Java\napt-get update\napt install openjdk-11-jdk -y\n\n# Instalando o jenkins\nwget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | apt-key add -\nsh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ \u003e /etc/apt/sources.list.d/jenkins.list'\napt-get update\napt-get install jenkins -y\nsystemctl start jenkins\n\n# Instalação do git\napt install git git-flow -y\n\n# Ansi [...]
            "name": "impacta-turma-4-prod",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.182.186",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/global/networks/default",
                "network_ip": "10.128.0.45",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/regions/us-central1/subnetworks/default",
                "subnetwork_project": "impacta-turma-4"
              }
            ],
            "project": "impacta-turma-4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/impacta-turma-4/zones/us-central1-a/instances/impacta-turma-4-prod",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.jenkins_server.data.google_compute_image.jenkins_image",
            "module.jenkins_server.data.template_file.user_data"
          ]
        }
      ]
    }
  ]
}